--- a/index.html
+++ b/index.html
@@ -16,28 +16,46 @@
                 <h3>1º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Curso introductorio</p>
-                        <p class="course-credits">Cr: 1</p>
+                        <label>
+                            <input type="checkbox" data-credits="1">
+                            <span class="course-name">Curso introductorio</span>
+                            <span class="course-credits">Cr: 1</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Bases biológicas de la nutrición humana</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Bases biológicas de la nutrición humana</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Microbiología alimentaria</p>
-                        <p class="course-credits">Cr: 8</p>
+                        <label>
+                            <input type="checkbox" data-credits="8">
+                            <span class="course-name">Microbiología alimentaria</span>
+                            <span class="course-credits">Cr: 8</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Fundamentos de la nutrición humana</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Fundamentos de la nutrición humana</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Química Alimentaria</p>
-                        <p class="course-credits">Cr: 8</p>
+                        <label>
+                            <input type="checkbox" data-credits="8">
+                            <span class="course-name">Química Alimentaria</span>
+                            <span class="course-credits">Cr: 8</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Metodología de las prácticas articuladoras</p>
-                        <p class="course-credits">Cr: 3</p>
+                        <label>
+                            <input type="checkbox" data-credits="3">
+                            <span class="course-name">Metodología de las prácticas articuladoras</span>
+                            <span class="course-credits">Cr: 3</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -46,24 +64,39 @@
                 <h3>2º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Normativa alimentaria</p>
-                        <p class="course-credits">Cr: 4</p>
+                        <label>
+                            <input type="checkbox" data-credits="4">
+                            <span class="course-name">Normativa alimentaria</span>
+                            <span class="course-credits">Cr: 4</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Bioquímica Nutricional</p>
-                        <p class="course-credits">Cr: 13</p>
+                        <label>
+                            <input type="checkbox" data-credits="13">
+                            <span class="course-name">Bioquímica Nutricional</span>
+                            <span class="course-credits">Cr: 13</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Seguridad alimentaria nutricional y soberanía alimentaria</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Seguridad alimentaria nutricional y soberanía alimentaria</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Administración aplicada al ejercicio de la profesión</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Administración aplicada al ejercicio de la profesión</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Práctica articuladora I</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Práctica articuladora I</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -75,24 +108,39 @@
                 <h3>3º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Diagnóstico y evaluación del estado nutricional</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Diagnóstico y evaluación del estado nutricional</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Nutrición y alimentación en el ciclo de la vida</p>
-                        <p class="course-credits">Cr: 10</p>
+                        <label>
+                            <input type="checkbox" data-credits="10">
+                            <span class="course-name">Nutrición y alimentación en el ciclo de la vida</span>
+                            <span class="course-credits">Cr: 10</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Salud pública</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Salud pública</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Bioestadística y métodos de investigación</p>
-                        <p class="course-credits">Cr: 10</p>
+                        <label>
+                            <input type="checkbox" data-credits="10">
+                            <span class="course-name">Bioestadística y métodos de investigación</span>
+                            <span class="course-credits">Cr: 10</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Práctica articuladora II</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Práctica articuladora II</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -101,24 +149,39 @@
                 <h3>4º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Producción e industrialización de alimentos</p>
-                        <p class="course-credits">Cr: 8</p>
+                        <label>
+                            <input type="checkbox" data-credits="8">
+                            <span class="course-name">Producción e industrialización de alimentos</span>
+                            <span class="course-credits">Cr: 8</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Transformaciones físico-químicas de los alimentos</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Transformaciones físico-químicas de los alimentos</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Epidemiología nutricional</p>
-                        <p class="course-credits">Cr: 6</p>
+                        <label>
+                            <input type="checkbox" data-credits="6">
+                            <span class="course-name">Epidemiología nutricional</span>
+                            <span class="course-credits">Cr: 6</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Educación en alimentación y nutrición Fundamentos y praxis</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Educación en alimentación y nutrición Fundamentos y praxis</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Práctica articuladora III</p>
-                        <p class="course-credits">Cr: 5</p>
+                        <label>
+                            <input type="checkbox" data-credits="5">
+                            <span class="course-name">Práctica articuladora III</span>
+                            <span class="course-credits">Cr: 5</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -130,24 +193,39 @@
                 <h3>5º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Nutrición clínica I</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Nutrición clínica I</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Ética de la alimentación</p>
-                        <p class="course-credits">Cr: 3</p>
+                        <label>
+                            <input type="checkbox" data-credits="3">
+                            <span class="course-name">Ética de la alimentación</span>
+                            <span class="course-credits">Cr: 3</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Nutrición poblacional</p>
-                        <p class="course-credits">Cr: 10</p>
+                        <label>
+                            <input type="checkbox" data-credits="10">
+                            <span class="course-name">Nutrición poblacional</span>
+                            <span class="course-credits">Cr: 10</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Diseño de alimentos</p>
-                        <p class="course-credits">Cr: 4</p>
+                        <label>
+                            <input type="checkbox" data-credits="4">
+                            <span class="course-name">Diseño de alimentos</span>
+                            <span class="course-credits">Cr: 4</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Práctica articuladora IV</p>
-                        <p class="course-credits">Cr: 8</p>
+                        <label>
+                            <input type="checkbox" data-credits="8">
+                            <span class="course-name">Práctica articuladora IV</span>
+                            <span class="course-credits">Cr: 8</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -156,16 +234,25 @@
                 <h3>6º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Nutrición Clínica II</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Nutrición Clínica II</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Gestión de servicios de alimentación colectiva</p>
-                        <p class="course-credits">Cr: 11</p>
+                        <label>
+                            <input type="checkbox" data-credits="11">
+                            <span class="course-name">Gestión de servicios de alimentación colectiva</span>
+                            <span class="course-credits">Cr: 11</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">Práctica articuladora V</p>
-                        <p class="course-credits">Cr: 17</p>
+                        <label>
+                            <input type="checkbox" data-credits="17">
+                            <span class="course-name">Práctica articuladora V</span>
+                            <span class="course-credits">Cr: 17</span>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -177,17 +264,45 @@
                 <h3>7º y 8º semestre</h3>
                 <div class="course-list">
                     <div class="course-item">
-                        <p class="course-name">Práctica profesional</p>
-                        <p class="course-credits">Cr: 45</p>
+                        <label>
+                            <input type="checkbox" data-credits="45">
+                            <span class="course-name">Práctica profesional</span>
+                            <span class="course-credits">Cr: 45</span>
+                        </label>
                     </div>
                     <div class="course-item">
-                        <p class="course-name">TFG</p>
-                        <p class="course-credits">Cr: 45</p>
+                        <label>
+                            <input type="checkbox" data-credits="45">
+                            <span class="course-name">TFG</span>
+                            <span class="course-credits">Cr: 45</span>
+                        </label>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="year-block electives-section">
+            <h2>Electivas</h2>
+            <div class="semester-box">
+                <h3>Mis Electivas</h3>
+                <div class="course-list" id="elective-courses">
+                    <div class="elective-input-group">
+                        <input type="text" class="new-elective-name" placeholder="Nombre de la electiva">
+                        <input type="number" class="new-elective-credits" placeholder="Créditos" min="0">
+                        <button class="add-elective-btn">Agregar Electiva</button>
+                    </div>
+                </div>
+            </div>
+            <div class="semester-box total-credits-box">
+                <h3>Total Créditos Electivas</h3>
+                <div class="course-list">
+                    <p class="total-electives-display">Créditos Totales: <span id="total-electives-credits">0</span></p>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
